--- a/lsp/Cargo.toml
+++ b/lsp/Cargo.toml
@@ -19,3 +19,7 @@ json-subscriber = "0.2.4"
 tracing-subscriber = "0.3.19"
 chrono = "0.4.39"
 papaya = "0.1.8"
+rayon = "1.10.0"
+
+[profile.release]
+debug = 1
