Separate lib from main to remove warning

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,8 @@ goldentests = "1.1"
 [[bin]]
 name = "hemlis"
 path = "src/main.rs"
+test = false
 
 [lib]
 name = "hemlis_lib"
-path = "src/main.rs"
+path = "src/lib.rs"
